project_4/405410047/myCompilerParser.java
// $ANTLR 3.5.2 myCompiler.g 2019-06-20 14:25:49

    // import packages here.
    import java.util.HashMap;
    import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class myCompilerParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHAR", "COMMENT", "ELSE", "EscapeSequence", 
		"FLOAT", "FOR", "Floating_point_constant", "IF", "INT", "Identifier", 
		"Integer_constant", "MAIN", "PRINTF", "RelationOP", "STRING_LITERAL", 
		"VOID", "WS", "Words", "'&'", "'('", "')'", "'*'", "'+'", "','", "'-'", 
		"'/'", "';'", "'='", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int CHAR=4;
	public static final int COMMENT=5;
	public static final int ELSE=6;
	public static final int EscapeSequence=7;
	public static final int FLOAT=8;
	public static final int FOR=9;
	public static final int Floating_point_constant=10;
	public static final int IF=11;
	public static final int INT=12;
	public static final int Identifier=13;
	public static final int Integer_constant=14;
	public static final int MAIN=15;
	public static final int PRINTF=16;
	public static final int RelationOP=17;
	public static final int STRING_LITERAL=18;
	public static final int VOID=19;
	public static final int WS=20;
	public static final int Words=21;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public myCompilerParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public myCompilerParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return myCompilerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "myCompiler.g"; }


	    boolean TRACEON = false;

	    // ============================================
	    // Create a symbol table.
		// ArrayList is easy to extend to add more info. into symbol table.
		//
		// The structure of symbol table:
		// <variable ID, type, memory location>
		//    - type: the variable type   (please check "enum Type")
		//    - memory location: the location (locals in VM) the variable will be stored at.
	    // ============================================
	    HashMap<String, ArrayList> symtab = new HashMap<String, ArrayList>();

	    int labelCount = 0;
		
		
		// storageIndex is used to represent/index the location (locals) in VM.
		// The first index is 0.
		int storageIndex = 0;

		String printBuffer;
	    // Record all assembly instructions.
	    List<String> TextCode = new ArrayList<String>();

	    // Type information.
	    public enum Type{
	       INT, FLOAT, CHAR;
	    }


	    /*
	     * Output prologue.
	     */
	    void prologue()
	    {
	       TextCode.add(";.source");
	       TextCode.add(".class public static myResult");
	       TextCode.add(".super java/lang/Object");
	       TextCode.add(".method public static main([Ljava/lang/String;)V");

	       /* The size of stack and locals should be properly set. */
	       TextCode.add(".limit stack 100");
	       TextCode.add(".limit locals 100");
	    }
	    
		
	    /*
	     * Output epilogue.
	     */
	    void epilogue()
	    {
	       /* handle epilogue */
	       TextCode.add("return");
	       TextCode.add(".end method");
	    }
	    
	    
	    /* Generate a new label */
	    String newLabel()
	    {
	       labelCount ++;
	       return (new String("L")) + Integer.toString(labelCount);
	    } 
	    
	    
	    public List<String> getTextCode()
	    {
	       return TextCode;
	    }			



	// $ANTLR start "program"
	// myCompiler.g:85:1: program : VOID MAIN '(' ')' '{' declarations statements '}' ;
	public final void program() throws RecognitionException {
		try {
			// myCompiler.g:85:8: ( VOID MAIN '(' ')' '{' declarations statements '}' )
			// myCompiler.g:85:10: VOID MAIN '(' ')' '{' declarations statements '}'
			{
			match(input,VOID,FOLLOW_VOID_in_program36); 
			match(input,MAIN,FOLLOW_MAIN_in_program38); 
			match(input,23,FOLLOW_23_in_program40); 
			match(input,24,FOLLOW_24_in_program42); 

			           /* Output function prologue */
			           prologue();
			        
			match(input,32,FOLLOW_32_in_program63); 
			pushFollow(FOLLOW_declarations_in_program77);
			declarations();
			state._fsp--;

			pushFollow(FOLLOW_statements_in_program90);
			statements();
			state._fsp--;

			match(input,33,FOLLOW_33_in_program100); 

					   if (TRACEON)
					      System.out.println("VOID MAIN () {declarations statements}");

			           /* output function epilogue */	  
			           epilogue();
			        
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "declarations"
	// myCompiler.g:105:1: declarations : ( type Identifier ';' declarations |);
	public final void declarations() throws RecognitionException {
		Token Identifier1=null;
		Type type2 =null;

		try {
			// myCompiler.g:105:13: ( type Identifier ';' declarations |)
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==CHAR||LA1_0==FLOAT||LA1_0==INT) ) {
				alt1=1;
			}
			else if ( (LA1_0==FOR||LA1_0==IF||LA1_0==Identifier||LA1_0==PRINTF||LA1_0==33) ) {
				alt1=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// myCompiler.g:105:15: type Identifier ';' declarations
					{
					pushFollow(FOLLOW_type_in_declarations127);
					type2=type();
					state._fsp--;

					Identifier1=(Token)match(input,Identifier,FOLLOW_Identifier_in_declarations129); 
					match(input,30,FOLLOW_30_in_declarations131); 
					pushFollow(FOLLOW_declarations_in_declarations133);
					declarations();
					state._fsp--;


								     if (TRACEON)
						                System.out.println("declarations: type Identifier : declarations");

					                 if (symtab.containsKey((Identifier1!=null?Identifier1.getText():null))) {
									    // variable re-declared.
					                    System.out.println("Type Error: " + 
					                                       Identifier1.getLine() + 
					                                       ": Redeclared identifier.");
					                    System.exit(0);
					                 }
					                 
									 /* Add ID and its attr_type into the symbol table. */
									 ArrayList the_list = new ArrayList();
									 the_list.add(type2);
									 the_list.add(storageIndex);
									 storageIndex = storageIndex + 1;
					                 symtab.put((Identifier1!=null?Identifier1.getText():null), the_list);
					              
					}
					break;
				case 2 :
					// myCompiler.g:126:9: 
					{

								     if (TRACEON)
					                    System.out.println("declarations: ");
								  
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declarations"



	// $ANTLR start "type"
	// myCompiler.g:133:1: type returns [Type attr_type] : ( INT | CHAR | FLOAT );
	public final Type type() throws RecognitionException {
		Type attr_type = null;


		try {
			// myCompiler.g:135:5: ( INT | CHAR | FLOAT )
			int alt2=3;
			switch ( input.LA(1) ) {
			case INT:
				{
				alt2=1;
				}
				break;
			case CHAR:
				{
				alt2=2;
				}
				break;
			case FLOAT:
				{
				alt2=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// myCompiler.g:135:7: INT
					{
					match(input,INT,FOLLOW_INT_in_type204); 
					 if (TRACEON) System.out.println("type: INT"); attr_type=Type.INT; 
					}
					break;
				case 2 :
					// myCompiler.g:136:7: CHAR
					{
					match(input,CHAR,FOLLOW_CHAR_in_type214); 
					 if (TRACEON) System.out.println("type: CHAR"); attr_type=Type.CHAR; 
					}
					break;
				case 3 :
					// myCompiler.g:137:7: FLOAT
					{
					match(input,FLOAT,FOLLOW_FLOAT_in_type224); 
					if (TRACEON) System.out.println("type: FLOAT"); attr_type=Type.FLOAT; 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return attr_type;
	}
	// $ANTLR end "type"



	// $ANTLR start "statements"
	// myCompiler.g:140:1: statements : ( statement statements |);
	public final void statements() throws RecognitionException {
		try {
			// myCompiler.g:140:11: ( statement statements |)
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==FOR||LA3_0==IF||LA3_0==Identifier||LA3_0==PRINTF) ) {
				alt3=1;
			}
			else if ( (LA3_0==33) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// myCompiler.g:140:12: statement statements
					{
					pushFollow(FOLLOW_statement_in_statements234);
					statement();
					state._fsp--;

					pushFollow(FOLLOW_statements_in_statements236);
					statements();
					state._fsp--;

					}
					break;
				case 2 :
					// myCompiler.g:142:11: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "statements"



	// $ANTLR start "statement"
	// myCompiler.g:144:1: statement : ( assign_stmt ';' | if_stmt | func_no_return_stmt ';' | for_stmt | print ';' );
	public final void statement() throws RecognitionException {
		try {
			// myCompiler.g:144:10: ( assign_stmt ';' | if_stmt | func_no_return_stmt ';' | for_stmt | print ';' )
			int alt4=5;
			switch ( input.LA(1) ) {
			case Identifier:
				{
				int LA4_1 = input.LA(2);
				if ( (LA4_1==31) ) {
					alt4=1;
				}
				else if ( (LA4_1==23) ) {
					alt4=3;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case IF:
				{
				alt4=2;
				}
				break;
			case FOR:
				{
				alt4=4;
				}
				break;
			case PRINTF:
				{
				alt4=5;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
				case 1 :
					// myCompiler.g:144:12: assign_stmt ';'
					{
					pushFollow(FOLLOW_assign_stmt_in_statement266);
					assign_stmt();
					state._fsp--;

					match(input,30,FOLLOW_30_in_statement268); 
					}
					break;
				case 2 :
					// myCompiler.g:145:12: if_stmt
					{
					pushFollow(FOLLOW_if_stmt_in_statement281);
					if_stmt();
					state._fsp--;

					}
					break;
				case 3 :
					// myCompiler.g:146:12: func_no_return_stmt ';'
					{
					pushFollow(FOLLOW_func_no_return_stmt_in_statement294);
					func_no_return_stmt();
					state._fsp--;

					match(input,30,FOLLOW_30_in_statement296); 
					}
					break;
				case 4 :
					// myCompiler.g:147:12: for_stmt
					{
					pushFollow(FOLLOW_for_stmt_in_statement309);
					for_stmt();
					state._fsp--;

					}
					break;
				case 5 :
					// myCompiler.g:148:6: print ';'
					{
					pushFollow(FOLLOW_print_in_statement316);
					print();
					state._fsp--;

					match(input,30,FOLLOW_30_in_statement318); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "statement"



	// $ANTLR start "print"
	// myCompiler.g:152:1: print : PRINTF '(' Words ( ',' parameter )* ')' ;
	public final void print() throws RecognitionException {
		Token Words3=null;

		try {
			// myCompiler.g:152:6: ( PRINTF '(' Words ( ',' parameter )* ')' )
			// myCompiler.g:152:8: PRINTF '(' Words ( ',' parameter )* ')'
			{
			match(input,PRINTF,FOLLOW_PRINTF_in_print336); 
			match(input,23,FOLLOW_23_in_print338); 
			Words3=(Token)match(input,Words,FOLLOW_Words_in_print340); 

									printBuffer = (Words3!=null?Words3.getText():null); 
									printBuffer = printBuffer.replaceAll("\"", "");
								
			// myCompiler.g:157:3: ( ',' parameter )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==27) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// myCompiler.g:157:4: ',' parameter
					{
					match(input,27,FOLLOW_27_in_print354); 
					pushFollow(FOLLOW_parameter_in_print356);
					parameter();
					state._fsp--;

					}
					break;

				default :
					break loop5;
				}
			}

			match(input,24,FOLLOW_24_in_print361); 

									TextCode.add("getstatic java/lang/System/out Ljava/io/PrintStream;");
									TextCode.add("ldc \""+ printBuffer + "\"");
									TextCode.add("invokevirtual java/io/PrintStream/println(Ljava/lang/String;)V");
					
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "print"



	// $ANTLR start "parameter"
	// myCompiler.g:164:1: parameter : Identifier ;
	public final void parameter() throws RecognitionException {
		Token Identifier4=null;

		try {
			// myCompiler.g:165:2: ( Identifier )
			// myCompiler.g:165:4: Identifier
			{
			Identifier4=(Token)match(input,Identifier,FOLLOW_Identifier_in_parameter374); 

						    Type tmp = (Type) symtab.get((Identifier4!=null?Identifier4.getText():null)).get(0);
							String tmp_str;
							int index;
							switch (tmp) {
							case INT: 
							          // load the variable into the operand stack.
									index = printBuffer.indexOf("%d");
									tmp_str = printBuffer.substring(0, index);
									TextCode.add("getstatic java/lang/System/out Ljava/io/PrintStream;");
									TextCode.add("ldc \"" + tmp_str + "\"");
									TextCode.add("invokevirtual java/io/PrintStream/print(Ljava/lang/String;)V");
									TextCode.add("getstatic java/lang/System/out Ljava/io/PrintStream;");
							        TextCode.add("iload " + symtab.get((Identifier4!=null?Identifier4.getText():null)).get(1));
									TextCode.add("invokevirtual java/io/PrintStream/print(I)V");
									printBuffer = printBuffer.substring(index + 2);
							        break;
							case FLOAT:
									index = printBuffer.indexOf("%f");
									tmp_str = printBuffer.substring(0, index);
									TextCode.add("getstatic java/lang/System/out Ljava/io/PrintStream;");
									TextCode.add("ldc \"" + tmp_str + "\"");
									TextCode.add("invokevirtual java/io/PrintStream/print(Ljava/lang/String;)V");
									TextCode.add("getstatic java/lang/System/out Ljava/io/PrintStream;");
							        TextCode.add("fload " + symtab.get((Identifier4!=null?Identifier4.getText():null)).get(1));
									TextCode.add("invokevirtual java/io/PrintStream/print(F)V");
									printBuffer = printBuffer.substring(index + 2);
							        break;
							case CHAR:
							          TextCode.add("aload " + symtab.get((Identifier4!=null?Identifier4.getText():null)).get(1));
							          break;
							
							}
				
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "parameter"



	// $ANTLR start "for_stmt"
	// myCompiler.g:201:1: for_stmt : FOR '(' assign_stmt ';' cond_expression ';' assign_stmt ')' block_stmt ;
	public final void for_stmt() throws RecognitionException {
		try {
			// myCompiler.g:201:9: ( FOR '(' assign_stmt ';' cond_expression ';' assign_stmt ')' block_stmt )
			// myCompiler.g:201:11: FOR '(' assign_stmt ';' cond_expression ';' assign_stmt ')' block_stmt
			{
			match(input,FOR,FOLLOW_FOR_in_for_stmt385); 
			match(input,23,FOLLOW_23_in_for_stmt387); 
			pushFollow(FOLLOW_assign_stmt_in_for_stmt389);
			assign_stmt();
			state._fsp--;

			match(input,30,FOLLOW_30_in_for_stmt391); 
			pushFollow(FOLLOW_cond_expression_in_for_stmt411);
			cond_expression();
			state._fsp--;

			match(input,30,FOLLOW_30_in_for_stmt413); 
			pushFollow(FOLLOW_assign_stmt_in_for_stmt421);
			assign_stmt();
			state._fsp--;

			match(input,24,FOLLOW_24_in_for_stmt429); 
			pushFollow(FOLLOW_block_stmt_in_for_stmt440);
			block_stmt();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "for_stmt"



	// $ANTLR start "if_stmt"
	// myCompiler.g:209:1: if_stmt : if_then_stmt if_else_stmt ;
	public final void if_stmt() throws RecognitionException {
		try {
			// myCompiler.g:210:13: ( if_then_stmt if_else_stmt )
			// myCompiler.g:210:15: if_then_stmt if_else_stmt
			{
			pushFollow(FOLLOW_if_then_stmt_in_if_stmt476);
			if_then_stmt();
			state._fsp--;

			pushFollow(FOLLOW_if_else_stmt_in_if_stmt478);
			if_else_stmt();
			state._fsp--;

			TextCode.add("END:");
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "if_stmt"



	// $ANTLR start "if_then_stmt"
	// myCompiler.g:214:1: if_then_stmt : IF '(' cond_expression ')' block_stmt ;
	public final void if_then_stmt() throws RecognitionException {
		try {
			// myCompiler.g:215:13: ( IF '(' cond_expression ')' block_stmt )
			// myCompiler.g:215:15: IF '(' cond_expression ')' block_stmt
			{
			match(input,IF,FOLLOW_IF_in_if_then_stmt518); 
			match(input,23,FOLLOW_23_in_if_then_stmt520); 
			pushFollow(FOLLOW_cond_expression_in_if_then_stmt522);
			cond_expression();
			state._fsp--;

			match(input,24,FOLLOW_24_in_if_then_stmt529); 
			pushFollow(FOLLOW_block_stmt_in_if_then_stmt531);
			block_stmt();
			state._fsp--;

			TextCode.add("goto END");
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "if_then_stmt"



	// $ANTLR start "if_else_stmt"
	// myCompiler.g:220:1: if_else_stmt : ( ELSE block_stmt |);
	public final void if_else_stmt() throws RecognitionException {
		try {
			// myCompiler.g:221:13: ( ELSE block_stmt |)
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==ELSE) ) {
				alt6=1;
			}
			else if ( (LA6_0==FOR||LA6_0==IF||LA6_0==Identifier||LA6_0==PRINTF||LA6_0==33) ) {
				alt6=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}

			switch (alt6) {
				case 1 :
					// myCompiler.g:221:15: ELSE block_stmt
					{
					match(input,ELSE,FOLLOW_ELSE_in_if_else_stmt567); 
					TextCode.add("ELSE:");
					pushFollow(FOLLOW_block_stmt_in_if_else_stmt571);
					block_stmt();
					state._fsp--;

					}
					break;
				case 2 :
					// myCompiler.g:223:13: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "if_else_stmt"



	// $ANTLR start "block_stmt"
	// myCompiler.g:226:1: block_stmt : '{' statements '}' ;
	public final void block_stmt() throws RecognitionException {
		try {
			// myCompiler.g:226:11: ( '{' statements '}' )
			// myCompiler.g:226:13: '{' statements '}'
			{
			match(input,32,FOLLOW_32_in_block_stmt612); 
			pushFollow(FOLLOW_statements_in_block_stmt614);
			statements();
			state._fsp--;

			match(input,33,FOLLOW_33_in_block_stmt616); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "block_stmt"



	// $ANTLR start "assign_stmt"
	// myCompiler.g:230:1: assign_stmt : Identifier '=' arith_expression ;
	public final void assign_stmt() throws RecognitionException {
		Token Identifier5=null;
		Type arith_expression6 =null;

		try {
			// myCompiler.g:230:12: ( Identifier '=' arith_expression )
			// myCompiler.g:230:14: Identifier '=' arith_expression
			{
			Identifier5=(Token)match(input,Identifier,FOLLOW_Identifier_in_assign_stmt628); 
			match(input,31,FOLLOW_31_in_assign_stmt630); 
			pushFollow(FOLLOW_arith_expression_in_assign_stmt632);
			arith_expression6=arith_expression();
			state._fsp--;

